--- a/index.html
+++ b/index.html
@@ -17,18 +17,27 @@
 
     <section class="main-content">
       <h3>
-<a id="willkommen-bei-lehmofenfeuerde" class="anchor" href="#willkommen-bei-lehmofenfeuerde" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Willkommen bei Lehmofenfeuer.de</h3>
+<a id="lehmofenfeuer" class="anchor" href="#lehmofenfeuer" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lehmofenfeuer</h3>
 
-<p>leckere Pizza aus Berlin</p>
+<p>Bio-Pizza aus dem Lehmofen</p>
+
+<h3>
+<a id="profil" class="anchor" href="#profil" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profil</h3>
+
+<p>Hauchdünn. Knusprig. Saftig. Deftig. Rustikal. Groß. Liebevoll. Bio. Unsere leckere runde Pizza hat einen Durchmesser von mehr als 40 cm – sie kann in Vierteln und als Riesenpizza gekauft werden. Wir bereiten die Pizza vor Ort frisch zu und backen im Lehmofen direkt auf Stein neben dem Buchenholzfeuer. Streng gehütete eigene Rezepturen und eine sehr lange Teigführung sind zusammen mit dem speziellen Backvorgang im untypisch gebauten Lehmofen unsere wichtigste Grundlage. Seit der Gründung 2011 verwenden wir ausschließlich Zutaten aus kontrolliert ökologischer Landwirtschaft (DE-ÖKO-034). Die wertvollste Zutat einer guten Pizza ist der Käse, welcher bei uns deshalb zusätzlich noch das Bioland-Siegel trägt. Der selbstgebaute Lehmofen ist mittlerweile über sechs Jahre alt – er steht auf dem Oldtimer „Elisabethe“ (407er Benz, Bj. 1976). Seit 2012 gibt es Lehmofenfeuer in Berlin, wo wir uns auf zwei Wochenmärkten sehr erfolgreich etabliert haben:</p>
 
 <h3>
 <a id="termine" class="anchor" href="#termine" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Termine</h3>
 
 <ul>
-<li>Mittwochs <a href="https://https://de-de.facebook.com/pages/%C3%96komarkt-am-Nordbahnhof/665171056853618">Ökomarkt am Nordbahnhof</a>
-</li>
-<li>Donnerstags</li>
+<li>Mittwochs <a href="https://de-de.facebook.com/pages/%C3%96komarkt-am-Nordbahnhof/665171056853618">Ökomarkt am Nordbahnhof</a> 11-18 Uhr</li>
+<li>Donnerstags <a href="">Kollwitzplatz</a> 12-19 Uhr</li>
 </ul>
+
+<h3>
+<a id="unsere-speisengetränke" class="anchor" href="#unsere-speisengetr%C3%A4nke" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Unsere Speisen/Getränke</h3>
+
+<p>Bilder</p>
 
 <h3>
 <a id="kontakt" class="anchor" href="#kontakt" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kontakt</h3>
