Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Lehmofenfeuer.de by lehmofenfeuer</title>
+    <title>Lehmofenfeuer by lehmofenfeuer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,17 +11,12 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Lehmofenfeuer.de</h1>
-      <h2 class="project-tagline">leckere Pizza aus dem Lehmofen</h2>
+      <h1 class="project-name">Lehmofenfeuer</h1>
+      <h2 class="project-tagline">Bio-Pizza aus dem Lehmofen</h2>
     </section>
 
     <section class="main-content">
       <h3>
-<a id="lehmofenfeuer" class="anchor" href="#lehmofenfeuer" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lehmofenfeuer</h3>
-
-<p>Bio-Pizza aus dem Lehmofen</p>
-
-<h3>
 <a id="profil" class="anchor" href="#profil" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profil</h3>
 
 <p>Hauchdünn. Knusprig. Saftig. Deftig. Rustikal. Groß. Liebevoll. Bio. Unsere leckere runde Pizza hat einen Durchmesser von mehr als 40 cm – sie kann in Vierteln und als Riesenpizza gekauft werden. Wir bereiten die Pizza vor Ort frisch zu und backen im Lehmofen direkt auf Stein neben dem Buchenholzfeuer. Streng gehütete eigene Rezepturen und eine sehr lange Teigführung sind zusammen mit dem speziellen Backvorgang im untypisch gebauten Lehmofen unsere wichtigste Grundlage. Seit der Gründung 2011 verwenden wir ausschließlich Zutaten aus kontrolliert ökologischer Landwirtschaft (DE-ÖKO-034). Die wertvollste Zutat einer guten Pizza ist der Käse, welcher bei uns deshalb zusätzlich noch das Bioland-Siegel trägt. Der selbstgebaute Lehmofen ist mittlerweile über sechs Jahre alt – er steht auf dem Oldtimer „Elisabethe“ (407er Benz, Bj. 1976). Seit 2012 gibt es Lehmofenfeuer in Berlin, wo wir uns auf zwei Wochenmärkten sehr erfolgreich etabliert haben:</p>
